--- a/Level-1/LevelOne.html
+++ b/Level-1/LevelOne.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Level-1</title>
 </head>
-<body>
-    
+<body style="background-color: black; color: white;">
+    <h1>Day-1 of Logic Building</h1>
+
+    <script>
+        /* (1) Write a program to check if a number is even or odd. */
+        // 1st Way
+        var num = 10;
+        if (num % 2 === 0) {
+            console.log(`${num} is Even Number`);
+        } else {
+            console.log(`${num} is Odd Number`);
+        }
+
+
+        // 2nd Way
+        const checkEvenOddNumber = (number) => {
+            if (number % 2 === 0) {
+                console.log(`${number} is Even Number`);
+            } else {
+                console.log(`${number} is Odd Number`);
+            }
+        }
+        checkEvenOddNumber(11)
+
+        // 3rd Way
+        const checkEvenOddNum = (number) => {
+            number % 2 === 0 ? console.log(`${number} is Even Number`) : console.log(`${number} is Odd Number`);
+        }
+        checkEvenOddNum(3)
+    </script>
 </body>
 </html>
