--- a/Level-1/01_index.html
+++ b/Level-1/01_index.html
@@ -3,10 +3,11 @@
 <head>
     <title>Level-1</title>
 </head>
-<body style="background-color: black; color: white;">
+<body style="background-color: black; color: white; text-align: center">
     <h1>Day-1 Logic Building</h1>
     <!-- <script src="01_One.js"></script> -->
     <!-- <script src="02_two.js"></script> -->
-     <script src="03_three.js"></script>
+    <!-- <script src="03_three.js"></script> -->
+    <script src="04_four.js"></script>
 </body>
 </html>
